--- a/{{cookiecutter.project_name}}/Vagrantfile
+++ b/{{cookiecutter.project_name}}/Vagrantfile
@@ -8,12 +8,11 @@ Vagrant.configure("2") do |config|
   config.vm.synced_folder ".", "/vagrant" # NOTE: On Hyper-V this will create an SMB share and require the user's credentials.
   config.vm.boot_timeout = 60
 
-  # NOTE: This will break on non-WSL systems and only exists to enable communication between WSL and Default Switch.
+  # NOTE: This will break on non-WSL systems and only exists to enable communication between WSL and Default Switch should you be running from WSL.
   # config.trigger.before :up do |trigger|
   #   trigger.info = "Setup Forwarding between 'vEthernet (WSL)' and 'vEthernet (Default Switch)'"
-  #   trigger.run = {inline: "/mnt/c/Windows/System32/WindowsPowerShell/v1.0/powershell.exe -Command {Get-NetIPInterface | Where {$_.InterfaceAlias -eq 'vEthernet (WSL)' -or $_.InterfaceAlias -eq 'vEthernet (Default Switch)'} | Where {$_.Forwarding -eq 'Disabled'} | Set-NetIPInterface -Forwarding Enabled -Verbose}"}
+  #   trigger.run = {inline: '/mnt/c/Windows/System32/WindowsPowerShell/v1.0/powershell.exe -Command "& {Get-NetIPInterface | Where {$_.InterfaceAlias -eq \"vEthernet (WSL)\" -or $_.InterfaceAlias -eq \"vEthernet (Default Switch)\"} | Where {$_.Forwarding -eq \"Disabled\"} | Set-NetIPInterface -Forwarding Enabled -Verbose}"'}
   # end
-
   config.vm.provider "hyperv" do |hv|
     hv.vmname = "{{ cookiecutter.vm_hostname }}"
     hv.cpus = 4
