--- a/{{cookiecutter.project_name}}/Vagrantfile
+++ b/{{cookiecutter.project_name}}/Vagrantfile
@@ -4,7 +4,7 @@
 Vagrant.configure("2") do |config|
   config.vm.box = "{{ cookiecutter.vm_image }}"
   config.vm.provider "hyperv"
-  # config.vm.box_check_update = false
+  config.vm.box_check_update = true
   # NOTE: On Hyper-V this will create an SMB share and require the user's credentials.
   config.vm.synced_folder ".", "/vagrant" 
   config.vm.boot_timeout = 60
