--- a/{{cookiecutter.project_name}}/Vagrantfile
+++ b/{{cookiecutter.project_name}}/Vagrantfile
@@ -25,7 +25,7 @@ Vagrant.configure("2") do |config|
     hv.maxmemory = nil
     hv.memory = {{ cookiecutter.vm_memory }}
     hv.linked_clone = true
-    hv.enable_virtualization_extensions = true
+    # hv.enable_virtualization_extensions = true
   end
 
   config.vm.provision "ansible" do |ansible|
@@ -36,6 +36,5 @@ Vagrant.configure("2") do |config|
       ansible_user: "vagrant",
       ansible_ssh_pass: "vagrant"
     }
-
   end
 end
